--- a/note/2017/珠海.md
+++ b/note/2017/珠海.md
@@ -2,7 +2,55 @@
 
 ## 珠海长隆
 
+### 参考
+
+- [马蜂窝](http://www.mafengwo.cn/wenda/detail-1138968.html)
+
+### 攻略
+
+- 强烈建议进门就先拿一份免费的地图，上面除了乐园的地图之外还有各种表演的时间，例如海豚、鲸鲨表演，烟花花车表演等等，这个非常重要，提前看好各项演出的时刻表才能做出最合理的安排。
+
+- 提前一天上网订票是比现场买便宜十八元，儿童与老人优惠就不变。尽量在十点入场，入场时拿地图和各个剧场的表演时间。然后马上去鲸鲨馆排队，就是有一个大鲸鱼的那里，这个地方是全馆的重中之重，值回票价的地方。晚上七点半在湖边有烟花表演，也很精彩。里面的所有的吃的都是价格昂贵，做好准备。
+
+- 必看：
+    - 海洋奇观，位于海洋馆，是世界上最大的天幕水族馆！一共饲养了1.5W条鱼。
+    - 极地探险馆：可以看到人气王北极熊和企鹅，还有非常可爱的水獭！紫衣也是他们的粉丝呢！
+    - 3大剧场：极地剧场（13：00，17：00），海豚剧场（14：00，18：00），海狮海象剧场（12：00，16：00）（最好提前至少半小时以上进入剧场占位）
+    - 花车巡游（15：00）
+    - 横琴湾的烟花激光表演（18：45）
+    - 珍稀动物展馆：鲸鲨馆、北极熊馆、企鹅馆、海象馆、海豚馆、亚洲小爪水獭馆、白鲸馆、淡水展馆、原斑点海豚馆。
+
+- 长隆大马戏城。和番禺长隆相比，珠海长隆国际马戏城科技感更强一点，动物表演占的比重没有番禺长隆的多，而且很多表演者都是外国人呢！当然，舞台设计也是焕然一新的，珠海长隆的舞台可是非常炫目哦！
+    - 20：00前进场
+    - 带上二代身份证和门票（进场验证）
+
+### 景点
+
 - 海洋公园
-    - 海豚湾开放时间10:00-21:00，表演时间为11:00、12:30、14:00、16:30、18:00。
-    - 海象山开放时间11:30-21:00，表演时间为11:30、13:00、14:30、17:00、18:30。
-    - 极地探险开放时间11:00-21:00，表演时间为12:00、13:30、16:15、17:30、19:00。
+    - 三大表演秀
+        - 海豚湾开放时间10:00-21:00，表演时间为11:00、12:30、14:00、16:30、18:00。
+        - 海象山开放时间11:30-21:00，表演时间为11:30、13:00、14:30、17:00、18:30。
+        - 极地探险开放时间11:00-21:00，表演时间为12:00、13:30、16:15、17:30、19:00。
+    - 鲨鱼馆
+    - 鹦鹉过山车
+    - 烟花表演: 晚上8点
+    
+- 横琴岛剧院
+    - 每日两场表演的时间是下午五点和八点
+    - 每日散场表演的时间是下午两点、五点、八点
+
+## 需要确认事项
+
+- 周六晚的安排
+- 酒店
+    - [碧湾大酒店](http://www.mafengwo.cn/hotel_zx/hotel/index.php?iId=612928&sRoom=2,0&sLabel=20173010169993&sCheckIn=2017-07-22&sCheckOut=2017-07-23#rooms_selector)
+    - 入住 14:00 离店 10:00
+    - 价格
+        - 豪华双床房 345
+        - 豪华大床房 346
+        - 豪华大床房 346
+- [海洋王国门票](https://travelitem.taobao.com/item.htm?spm=181.7675128.1998591913.1.4dba8ddcz5pR4K&id=521472793088)
+    - 两大一小 855
+    - 4成人票 333*5 = 1665
+    - 总计 2520
+    
