--- a/work/lr/design/autorun/需求.md
+++ b/work/lr/design/autorun/需求.md
@@ -38,9 +38,11 @@
 
 - 断点续测: 测试报错后,下一次运行从之前报错的用例继续测试
 - 命令行参数支持,类似于:
-    `lr.exe --auto-run=1 --input=auto_run.xml --output=result.txt --resolution=960X640`
+
+> `lr.exe --auto-run=1 --input=auto_run.xml --output=result.txt --resolution=960X640`
+
     其中:
-        - auto-run 表示是否启动auto_run模式
-        - input 输入文件
-        - output 输出文件
-        - resolution 分辨率
+    auto-run 表示是否启动auto_run模式
+    input 输入文件
+    output 输出文件
+    resolution 分辨率
