--- a/work/lr/design/autorun/需求.md
+++ b/work/lr/design/autorun/需求.md
@@ -2,7 +2,7 @@
 
 ## 总出发点
 
-自动跑游戏中某些玩法的所有关卡,发现某些由于测试覆盖率不够而忽略的bug, \
+自动跑游戏中某些玩法的所有关卡,发现某些由于测试覆盖率不够而忽略的bug,
 这些bug主要是脚本和配置引起,当然也可能是客户端底层本身存在问题.
 
 ## 需求列表
